--- a/gulp-start/app/scss/style.scss
+++ b/gulp-start/app/scss/style.scss
@@ -1,3 +1,10 @@
-@import "../../node_modules/normalize.css/normalize";
+@import "vars";
+@import "libs";
+@import "fonts";
+
+
+
+@import "media";
+
 //@import "../../node_modules/slick-carousel/slick/slick";
 //@import "../../node_modules/magnific-popup/dist/magnific-popup";
